--- a/style.css
+++ b/style.css
@@ -18,27 +18,26 @@ header {
 
 main {
   width: 100%;
-  height: 1400px;
-  background-color: white;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
 }
 
 .left {
   width: 230px;
-  height: 100%;
+  height: 1400px;
   background-color: lightgreen;
 }
 
 .center {
   width: 500px;
-  height: 100%;
+  height: 1400px;
   background-color: green;
 }
 
 .right {
   width: 230px;
-  height: 100%;
+  height: 1400px;
   background-color: lightgreen;
 }
 
